--- a/main.html
+++ b/main.html
@@ -10,6 +10,55 @@
 	<!-- the entire body must be written by student -->
     <script type="text/javascript" src="./script.js">
 </script>
+	<!DOCTYPE html>
+<html>
+<head>
+    <title>Signup Form Car</title>
+</head>
+<body>
+    <form method="post" action="process_signup.php">
+        <label for="name">Name:</label>
+        <input type="text" id="name" name="name" placeholder="Name" required><br><br>
+
+        <label for="email">Email:</label>
+        <input type="email" id="email" name="email" placeholder="Email" required><br><br>
+
+        <label>Gender:</label>
+        <input type="radio" id="gender_m" name="gender" required>
+        <label for="gender_m">Male</label>
+        <input type="radio" id="gender_f" name="gender" required>
+        <label for="gender_f">Female</label><br><br>
+
+        <label for="cars">Car Brands:</label>
+        <select id="cars" name="cars" required>
+            <option value="">--Please choose an option--</option>
+            <option value="Toyota">Toyota</option>
+            <option value="Honda">Honda</option>
+            <option value="Ford">Ford</option>
+            <option value="Chevrolet">Chevrolet</option>
+            <!-- Add more options as needed -->
+        </select><br><br>
+
+        <label for="age">Age:</label>
+        <input type="number" id="age" name="age" placeholder="Age" required><br><br>
+
+        <label for="dob">Date of Birth:</label>
+        <input type="date" id="dob" name="dob" required><br><br>
+
+        <label for="tel">Phone Number:</label>
+        <input type="tel" id="tel" name="tel" placeholder="xxx-xxx-xxxx"><br><br>
+
+        <label for="password">Password:</label>
+        <input type="password" id="password" name="password" placeholder="Password" required><br><br>
+
+        <input type="checkbox" id="tos" name="tos" required>
+        <label for="tos">I agree to the TOS</label><br><br>
+
+        <input type="submit" value="Sign Up">
+    </form>
+</body>
+</html>
+
 
 </body>
 
