--- a/main.html
+++ b/main.html
@@ -54,7 +54,7 @@
         <input type="checkbox" id="tos" name="tos" required>
         <label for="tos">I agree to the TOS</label><br><br>
 
-        <input type="submit" value="Sign Up">
+        <input type="submit" value="submit">
     </form>
 </body>
 </html>
